test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_ioerror_expr.draco
proc main() void : a := ioerror(a); corp;

