test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_upto_as_identifier.draco
int upto;
 
proc main() void : a := 1; corp;
